# Qt_shader_cpp

./: .gitignore  README.md
shader_lab/: CMakeLists.txt
shader_lab/cpp/: glwidget.cpp  glwidget.hpp  main.cpp  mainwindow.cpp  qt_bridge.hpp  scan.cpp  scan.hpp
shader_lab/shaders/: custom_shader.frag  custom_shader.vert
shader_lab/ui/: Main.qml  MySlider.qml
